# rula

./: .dockerignore  .editorconfig  .env.local.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
apps/agent/: Dockerfile  constraints.txt  pyproject.toml
apps/agent/src/ru_local_avatar_agent/: __init__.py  __main__.py
apps/agent/src/ru_local_avatar_agent/api/: __init__.py  app.py
apps/agent/src/ru_local_avatar_agent/domain/: __init__.py  contracts.py  events.py  session.py
apps/agent/src/ru_local_avatar_agent/metrics/: __init__.py  acceptance.py
apps/agent/src/ru_local_avatar_agent/runtime/: __init__.py  clause_chunker.py  config.py  mock_adapters.py  pipeline.py  status.py  vllm_client.py
apps/agent/src/ru_local_avatar_agent/voice/: __init__.py  audio.py  audio_pacer.py  audit.py  barge.py  brain.py  face.py  face_timeline.py  fast_tts.py  llm.py  metrics.py  runtime.py  streaming_tts.py  stt.py  text_match.py  trace.py  tts.py  tts_cache.py  (+4 more)
apps/agent/tests/: test_api_security.py  test_audio_pacer.py  test_barge.py  test_clause_chunker.py  test_compound_questions.py  test_conversation_audit.py  test_conversation_ownership.py  test_dialogue_brain.py  test_face_timeline.py  test_fast_tts.py  test_pipeline.py  test_runtime_status.py  test_session_state_machine.py  test_session_store.py  test_streaming_tts_config.py  test_text_match.py  test_tts_budget.py  test_tts_response_policy.py  test_tts_units.py  test_turn_policy.py  test_turn_trace.py  test_voice_runtime_workers.py
(+54 files in other folders)
