[project]
name = "ru-local-avatar-agent"
version = "0.1.0"
description = "Local digital human agent with speculative turn-taking contracts."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]
# GPU voice runtime extras; installed inside the agent container where
# torch/torchaudio already exist in the base image.
voice = [
  "qwen-tts",
  "onnxruntime-gpu>=1.20.0",
  "livekit>=1.0.0",
  "livekit-api>=1.0.0",
  "soundfile>=0.12.0",
  "omegaconf>=2.3.0",
  "hydra-core>=1.3.0",
  "pyannote-audio==4.0.0",
  "sentencepiece",
  "silero-vad>=5.1.0",
  "torchcodec==0.14.0",
  "prometheus-client>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
